Made changes to prices tab

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
+              <img src="img/Smarc-Logo-Speaker-Section-5.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
                 <h3>And many more</a></h3>
                 <p>Exciting speakers</p>
@@ -243,7 +243,7 @@
               <div class="col-md-2"></div>
               <div class="col-md-10">
                 <h4>Registration</h4>
-                <p>Register using the Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJlf_sqR_gvsfzsMDp1vNin3hHwdEt-BLPjae91HeDNzNwkw/viewform?usp=dialog" target="_blank"> Google Form Link </a></p>
+                <p>Register using the Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJlf_sqR_gvsfzsMDp1vNin3hHwdEt-BLPjae91HeDNzNwkw/viewform?usp=dialog" target="_blank"> <b>Google Form Link</b>  </a></p>
               </div>
             </div>
 
@@ -254,7 +254,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Ophthalmology <span></span></h4>
-                <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - <b>849</b></p>
+                <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - <b>₹849</b></p>
               </div>
             </div>
 
@@ -265,7 +265,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>ENT <span></span></h4>
-                <p>Otoscope, Tracheostomy, Cricothyrodotomy, Heimlich Maneuver, Foreign body removal, Nasal bleeding management - <b>599</b></p>
+                <p>Otoscope, Tracheostomy, Cricothyrodotomy, Heimlich Maneuver, Foreign body removal, Nasal bleeding management - <b>₹599</b></p>
               </div>
             </div>
 
@@ -276,7 +276,7 @@
                    <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>BPCS<span></span></h4>
-                <p>Heart sounds and murmurs, Lumbar puncture, Ascitic tap, Biopsy processing techniques - <b>499</b> </p>
+                <p>Heart sounds and murmurs, Lumbar puncture, Ascitic tap, Biopsy processing techniques - <b>₹499</b> </p>
               </div>
             </div>
 
@@ -287,7 +287,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Forensic Medicine<span></span></h4>
-                <p> Bomb blast injuries effect and exposure, Experience effective toxicology on hand, Art of forensic in a role play - <b>499</b> </p>
+                <p> Bomb blast injuries effect and exposure, Experience effective toxicology on hand, Art of forensic in a role play - <b>₹499</b> </p>
               </div>
             </div>
 
@@ -298,7 +298,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Obstetrics and Gynaecology<span></span></h4>
-                <p>D&C , IUD insertion and removal, Normal vaginal delivery and episiotomy, Assisted breech delivery, Cervical assessment and bimanual examination - <b>899</b> </p>
+                <p>D&C , IUD insertion and removal, Normal vaginal delivery and episiotomy, Assisted breech delivery, Cervical assessment and bimanual examination - <b>₹899</b> </p>
               </div>
             </div>
 
@@ -309,7 +309,7 @@
                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Oncology<span></span></h4>
-                <p> Introduction to oncology, diagnostic imaging and biopsy techniques, cancer treatment & management, advances in cancer, research & mammography - <b>249</b> </p>
+                <p> Introduction to oncology, diagnostic imaging and biopsy techniques, cancer treatment & management, advances in cancer, research & mammography - <b>₹249</b> </p>
               </div>
             </div>
 
@@ -320,7 +320,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Wet Lab<span></span></h4>
-                <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - <b>849</b> </p>
+                <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - <b>₹849</b> </p>
               </div>
             </div>
 
@@ -331,7 +331,7 @@
                    <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>GI Laparoscopy<span></span></h4>
-                <p>Laproscopy, Endoscopy, Biopsy, Foreign body removal - <b>499</b></p>
+                <p>Laproscopy, Endoscopy, Biopsy, Foreign body removal - <b>₹499</b></p>
               </div>
             </div>
 
@@ -342,7 +342,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Basic Surgical Skills<span></span></h4>
-                <p>Gloving & Gowning, Ryles Tube (On Mannequin), Foley's Catheter (On Mannequin), Suturing On Pig Skin, Wound Dressing, Abscess Drainage - <b>799</b> </p>
+                <p>Gloving & Gowning, Ryles Tube (On Mannequin), Foley's Catheter (On Mannequin), Suturing On Pig Skin, Wound Dressing, Abscess Drainage - <b>₹799</b> </p>
               </div>
             </div>
 
@@ -353,7 +353,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
                 </div> -->
                 <h4>Orthopedics<span></span></h4>
-                <p>External fixation and application, Fracture fixation, Implant exhibition, Splints and tractions - <b>749</b> </p>
+                <p>External fixation and application, Fracture fixation, Implant exhibition, Splints and tractions - <b>₹749</b> </p>
               </div>
             </div>
 
@@ -364,7 +364,7 @@
                    <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>ECG & STEMI<span></span></h4>
-                <p>Basics of ECG, STEMI - <b>249</b> </p>
+                <p>Basics of ECG, STEMI - <b>₹249</b> </p>
               </div>
             </div>
 
@@ -375,7 +375,7 @@
                    <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>ICU Care<span> Providing care that makes difference</span></h4>
-                <p>Trauma Care Approach, Emergency Care Set, Monitoring of Patient and ICU shift, Management of Poisoning, Team based approach on Cardiac Arrest - <b>799</b> </p>
+                <p>Trauma Care Approach, Emergency Care Set, Monitoring of Patient and ICU shift, Management of Poisoning, Team based approach on Cardiac Arrest - <b>₹799</b> </p>
               </div>
             </div>
 
@@ -386,7 +386,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Neonatology<span></span></h4>
-                <p>Preparation at birth,routine care, Positive pressure ventilation, Intubation, Chest compression,drugs and vascular access, Simulation and debriefing - <b>399</b> </p>
+                <p>Preparation at birth,routine care, Positive pressure ventilation, Intubation, Chest compression,drugs and vascular access, Simulation and debriefing - <b>₹399</b> </p>
               </div>
             </div>
 
@@ -397,7 +397,7 @@
                    <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
                 </div> -->
                 <h4>Radiology<span></span></h4>
-                <p>USG - Antenatal Mother;Abdomen, CT - RTA(Haemorrhage), X-Ray - Types of X-Ray; Positions;examples, Basics of MRI - <b>349</b> </p>
+                <p>USG - Antenatal Mother;Abdomen, CT - RTA(Haemorrhage), X-Ray - Types of X-Ray; Positions;examples, Basics of MRI - <b>₹349</b> </p>
               </div>
             </div>
 
@@ -408,7 +408,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Bio Chemistry<span></span></h4>
-                <p>ABG Analysis,Cardiac Tropinis, Lipid Profile - <b>249</b> </p>
+                <p>ABG Analysis,Cardiac Tropinis, Lipid Profile - <b>₹249</b> </p>
               </div>
             </div>
 
@@ -419,7 +419,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Pulmonology<span></span></h4>
-                <p>TB programme, Thoracocentesis, Interpretation of chest xrays - <b>399</b> </p>
+                <p>TB programme, Thoracocentesis, Interpretation of chest xrays - <b>₹399</b> </p>
               </div>
             </div>
 <!-- 
@@ -492,7 +492,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Research Paper Presentation <span></span></h4>
-                <p> A formal platform for sharing original research findings in the medical field at the conference - ₹49  </p>
+                <p> A formal platform for sharing original research findings in the medical field at the conference - <b>₹49</b>  </p>
               </div>
             </div>
 
@@ -503,7 +503,7 @@
                    <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Research Proposal Presentation<span></span></h4>
-                <p>A structured opportunity to present proposed research projects in the medical field, outlining objectives, methodologies - ₹49 </p>
+                <p>A structured opportunity to present proposed research projects in the medical field, outlining objectives, methodologies - <b>₹49</b> </p>
               </div>
             </div>
 
@@ -514,7 +514,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Poster Presentation<span></span></h4>
-                <p>A visual display of research findings in the medical field, presented on a poster format that allows for concise summaries of the study's objectives - ₹49 </p>
+                <p>A visual display of research findings in the medical field, presented on a poster format that allows for concise summaries of the study's objectives - <b>₹49</b> </p>
               </div>
             </div>
 
@@ -525,7 +525,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Case Presentation<span></span></h4>
-                <p>A detailed discussion of a specific patient case in the medical field, highlighting the clinical background, diagnosis, treatment, and outcomes - ₹49 </p>
+                <p>A detailed discussion of a specific patient case in the medical field, highlighting the clinical background, diagnosis, treatment, and outcomes - <b>₹49</b> </p>
               </div>
             </div>
 
@@ -536,7 +536,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4> Histology/Histopathology Rangoli <span></span></h4>
-                <p> Medical Rangoli: Where colors dance and joy blossoms with a touch of Medicine field - Free </p>
+                <p> Medical Rangoli: Where colors dance and joy blossoms with a touch of Medicine field - <b>Free</b> </p>
               </div>
             </div>
 
@@ -547,7 +547,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Medical Quiz<span></span></h4>
-                <p>An engaging and interactive session designed to test participants' knowledge on various medical topics - ₹99 </p>
+                <p>An engaging and interactive session designed to test participants' knowledge on various medical topics - <b>₹99</b> </p>
               </div>
             </div>
 
@@ -558,7 +558,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Med-Charades<span></span></h4>
-                <p>A fun and interactive game where participants act out medical terms, conditions, or procedures without speaking - ₹99 </p>
+                <p>A fun and interactive game where participants act out medical terms, conditions, or procedures without speaking - <b>₹99</b> </p>
               </div>
             </div>
 
@@ -569,7 +569,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Hogwarts themed Medihunt<span></span></h4>
-                <p>An interactive and educational activity where participants solve clues related to medical concepts and practices to find hidden items - ₹149 </p>
+                <p>An interactive and educational activity where participants solve clues related to medical concepts and practices to find hidden items - <b>₹149</b> </p>
               </div>
             </div>
 
@@ -580,7 +580,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Science Fair<span></span></h4>
-                <p>An event where participants showcase innovative projects and experiments related to medical science, allowing them to present their findings - Free (for delegates)</p>
+                <p>An event where participants showcase innovative projects and experiments related to medical science, allowing them to present their findings -<b>Free (for delegates)</b> </p>
               </div>
             </div>
 
@@ -591,7 +591,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Medical Hackathon<span></span></h4>
-                <p>Hack Health, Heal Futures - Free</p>
+                <p>Hack Health, Heal Futures - <b>Free</b></p>
               </div>
             </div>
 
@@ -602,7 +602,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Medical Model<span></span></h4>
-                <p>Hack Health, Heal Futures - ₹99</p>
+                <p>Hack Health, Heal Futures - <b> ₹99</b></p>
               </div>
             </div>
 
@@ -613,7 +613,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Chart<span></span></h4>
-                <p>Get informative charts - ₹49</p>
+                <p>Get informative charts - <b>₹49</b> </p>
               </div>
             </div>
 
@@ -624,7 +624,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>RTA<span></span></h4>
-                <p> - ₹249</p>
+                <p> - <b>₹249</b></p>
               </div>
             </div>
 
@@ -1088,7 +1088,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Gallery</h2>
-          <p>Check our gallery from the recent events</p>
+          <p>Check our gallery from Smarc2K24</p>
         </div>
       </div>
 
@@ -1097,10 +1097,10 @@
         <a href="img/gallery/2-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/2-6.jpg" alt=""></a>
         <a href="img/gallery/3-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/3-6.jpg" alt=""></a>
         <a href="img/gallery/4-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/4-6.jpg" alt=""></a>
-        <a href="img/gallery/5.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/5.jpg" alt=""></a>
-        <a href="img/gallery/6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6.jpg" alt=""></a>
-        <a href="img/gallery/7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7.jpg" alt=""></a>
-        <a href="img/gallery/8.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/8.jpg" alt=""></a>
+        <a href="img/gallery/5-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/5-6.jpg" alt=""></a>
+        <a href="img/gallery/6-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6-6.jpg" alt=""></a>
+        <a href="img/gallery/7-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7-6.jpg" alt=""></a>
+        <a href="img/gallery/8-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/8-6.jpg" alt=""></a>
       </div>
 
     </section>
