--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/apple-touch-icon-new.png" rel="icon">
+  <link href="img/Smarc_Logo_New.jpg" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -191,7 +191,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/Smarc-Logo-Speaker-Section-5.jpg" alt="Speaker 6" class="img-fluid">
+              <img src="img/Smarc_Logo_New_Speaker-3.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
                 <h3>And many more</a></h3>
                 <p>Exciting speakers</p>
@@ -985,16 +985,16 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/6.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/6.jpg" alt="" class="img-fluid">
+              <a href="img/venue-gallery/Trees-1.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="img/venue-gallery/Trees-1.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/7.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/7.jpg" alt="" class="img-fluid">
+              <a href="img/venue-gallery/temple.jpeg" class="venobox" data-gall="venue-gallery">
+                <img src="img/venue-gallery/temple.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -1002,7 +1002,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="img/venue-gallery/8.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/8.jpg" alt="" class="img-fluid">
+                <img src="img/venue-gallery/Library.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -1281,7 +1281,7 @@
 
         <div class="section-header">
           <h2>Basic Delegate Registration</h2>
-          <p>Velit consequatur consequatur inventore iste fugit unde omnis eum aut.</p>
+          <p>Register yourself for Experiencing an wonderful Smarc2k25</p>
         </div>
 
         <div class="row">
@@ -1417,11 +1417,12 @@
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+917075282828">V Pramod Sriram - 7075282828</a></p>
-              <p><a href="tel:+918374883483">Y Vivek - 8374883483</a></p>
-              <p><a href="tel:+919368976419">C Pavan - 9368976419</a></p>
-
-
+              <p><a href="tel:+917075282828">V Pramod Sriram [Organising Secretary] - 7075282828</a></p>
+              <p><a href="tel:+918374883483">Y Vivek [Workshop Head] - 8374883483</a></p>
+              <p><a href="tel:+919368976419">C Pavan [Registration Head] - 9368976419</a></p>
+              <p><a href="tel:+919398450273">B Noel [Cultural head] - 9398450273</a></p>
+              <p><a href="tel:+917036482345">K Yasaswi [Joint secretary] - 7036482345</a></p>
+              <p><a href="tel:+917013230402">K Chalama reddy [Joint secretary] - 7013230402</a></p>
             </div>
           </div>
 
@@ -1512,7 +1513,7 @@
               KIMS, Chaitanya HealthCity <br>
               Amalapuram, 533201<br>
               Andhra Pradesh <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
+              <strong>Phone:</strong> 7075282828 <br>
               <strong>Email:</strong> Smarc2k25@gmail.com<br>
             </p>
 
