--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Wet Lab<span></span></h4>
-                <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - <b>₹849</b> </p>
+                <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - <b>₹899</b> </p>
               </div>
             </div>
 
@@ -483,6 +483,16 @@
 
           <!-- Schdule Day 2 -->
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
+
+
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <h4>Registration</h4>
+                <p>Register using the Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLkerHxTbFp-AL0N-hSvmri_jZfH9BzbFHHhNGOyQY9p-qQw/viewform?usp=header" target="_blank"> <b>Google Form Link</b>  </a></p>
+              </div>
+            </div>
 
 
             <div class="row schedule-item">
@@ -1097,10 +1107,10 @@
         <a href="img/gallery/2-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/2-6.jpg" alt=""></a>
         <a href="img/gallery/3-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/3-6.jpg" alt=""></a>
         <a href="img/gallery/4-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/4-6.jpg" alt=""></a>
-        <a href="img/gallery/5-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/5-6.jpg" alt=""></a>
-        <a href="img/gallery/6-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6-6.jpg" alt=""></a>
-        <a href="img/gallery/7-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7-6.jpg" alt=""></a>
-        <a href="img/gallery/8-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/8-6.jpg" alt=""></a>
+        <a href="img/gallery/5-7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/5-7.jpg" alt=""></a>
+        <a href="img/gallery/6-7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6-7.jpg" alt=""></a>
+        <a href="img/gallery/7-7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7-7.jpg" alt=""></a>
+        <a href="img/gallery/8-7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/8-7.jpg" alt=""></a>
       </div>
 
     </section>
