added links and youtube video

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="intro-container wow fadeIn">
       <h1 class="mb-4 pb-0">Southern Medicos<br><span>Annual Research</span> Conference</h1>
       <p class="mb-4 pb-0">19-21 June | KIMS, Amalapuram</p>
-      <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
+      <a href="https://youtu.be/ASF5YBMY_oc?si=1fxVvYnNyRug1bDt" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
     </div>
@@ -502,7 +502,8 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Research Paper Presentation <span></span></h4>
-                <p> A formal platform for sharing original research findings in the medical field at the conference - <b>₹49</b>  </p>
+                <p> A formal platform for sharing original research findings in the medical field at the conference.                 
+                  <p>Submit using the Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSffwICzJcOLRZmkGE-4xrKdkFBPHeNUDggCtPjDnmuCzJ4scw/viewform?usp=dialog" target="_blank"> <b>Google Form Link</b>  </a></p> - <b>₹49</b>  </p>
               </div>
             </div>
 
@@ -513,7 +514,9 @@
                    <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Research Proposal Presentation<span></span></h4>
-                <p>A structured opportunity to present proposed research projects in the medical field, outlining objectives, methodologies - <b>₹49</b> </p>
+                <p>A structured opportunity to present proposed research projects in the medical field, outlining objectives, methodologies.
+                  <p>Submit using the Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSehBRaD4J5nFXKILnpXKVn5Cse1ndhubpjZrrD9MYtOp3pwyA/viewform?usp=dialog" target="_blank"> <b>Google Form Link</b>  </a></p> 
+                  - <b>₹49</b> </p>
               </div>
             </div>
 
@@ -524,7 +527,10 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Poster Presentation<span></span></h4>
-                <p>A visual display of research findings in the medical field, presented on a poster format that allows for concise summaries of the study's objectives - <b>₹49</b> </p>
+                <p>A visual display of research findings in the medical field, presented on a poster format that allows for concise summaries of the study's objectives.
+                  <p>Submit using the Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSduf0K3DBzl38uI4-2n4hlJjk6lt_ToALzCOBzWxPf9KFJBog/viewform?usp=dialog" target="_blank"> <b>Google Form Link</b>  </a></p>
+
+                  - <b>₹49</b> </p>
               </div>
             </div>
 
@@ -535,7 +541,10 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Case Presentation<span></span></h4>
-                <p>A detailed discussion of a specific patient case in the medical field, highlighting the clinical background, diagnosis, treatment, and outcomes - <b>₹49</b> </p>
+                <p>A detailed discussion of a specific patient case in the medical field, highlighting the clinical background, diagnosis, treatment, and outcomes.
+                <p>Register using the Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSejmGjGECWudLRDjoSykN9_9Q0j_BtTbQQMTcFJJo_Bg8FPFg/viewform?usp=dialog" target="_blank"> <b>Google Form Link</b>  </a></p>
+
+                  - <b>₹49</b> </p>
               </div>
             </div>
 
