--- a/index.html
+++ b/index.html
@@ -1120,6 +1120,8 @@
         <a href="img/gallery/6-7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6-7.jpg" alt=""></a>
         <a href="img/gallery/7-7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7-7.jpg" alt=""></a>
         <a href="img/gallery/8-7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/8-7.jpg" alt=""></a>
+        <a href="img/gallery/9-9.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/9-9.jpg"  width="500" height="200" alt=""></a>
+
       </div>
 
     </section>
