--- a/index.html
+++ b/index.html
@@ -250,6 +250,14 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
+                <h4>Accommodations</h4>
+                <p>Book your accommodation using this Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSf3qVUcIwW45pnQAzujQhsIJaz055Zu8m8ODiCYjI3R3kHJ-Q/viewform?usp=dialog" target="_blank"> <b>Google Form Link</b>  </a></p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
                <!--  <div class="speaker">
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
