--- a/index.html
+++ b/index.html
@@ -250,14 +250,6 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <h4>Accomodations</h4>
-                <p>Book your accomodation using this Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSf3qVUcIwW45pnQAzujQhsIJaz055Zu8m8ODiCYjI3R3kHJ-Q/viewform?usp=dialog" target="_blank"> <b>Google Form Link</b>  </a></p>
-              </div>
-            </div>
-
-            <div class="row schedule-item">
-              <div class="col-md-2"></div>
-              <div class="col-md-10">
                <!--  <div class="speaker">
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
@@ -931,6 +923,16 @@
  -->
           </div>
           <!-- End Schdule Day 2 -->
+         <!--  
+        
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <h4>Accomodations</h4>
+                <p>Book your accomodation using this Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSf3qVUcIwW45pnQAzujQhsIJaz055Zu8m8ODiCYjI3R3kHJ-Q/viewform?usp=dialog" target="_blank"> <b>Google Form Link</b>  </a></p>
+              </div>
+            </div> -->
 
         </div>
 
@@ -1356,13 +1358,56 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4">
+            <div class="card mb-5 mb-lg-0">
+              <div class="card-body">
+                <h5 class="card-title text-muted text-uppercase text-center">Workshop Registration</h5>
+                <!-- <h6 class="card-price text-center">₹2499</h6> -->
+                <!-- <hr>
+                <ul class="fa-ul">
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Coffee Break</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Custom Badge</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Community Access</li>
+                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Workshop Access</li>
+                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>After Party</li>
+                </ul>
+                <hr> -->
+                <div class="text-center">
+                  <button type="button" class="btn" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfaKfGMeyYL-DREBn5P6gUpIYcR4sMXVUcU9bqwwqFJYy1uYA/viewform?usp=dialog')" >Register</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="card mb-5 mb-lg-0">
+              <div class="card-body">
+                <h5 class="card-title text-muted text-uppercase text-center">Scientific Activities Registration</h5>
+                <!-- <h6 class="card-price text-center">₹2499</h6> -->
+                <!-- <hr>
+                <ul class="fa-ul">
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Coffee Break</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Custom Badge</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Community Access</li>
+                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Workshop Access</li>
+                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>After Party</li>
+                </ul>
+                <hr> -->
+                <div class="text-center">
+                  <button type="button" class="btn" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeLkerHxTbFp-AL0N-hSvmri_jZfH9BzbFHHhNGOyQY9p-qQw/viewform?usp=header')" >Register</button>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- Pro Tier -->
-          <!-- <div class="col-lg-4">
+          <div class="col-lg-4">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">Premium Access</h5>
-                <h6 class="card-price text-center">$350</h6>
-                <hr>
+                <h5 class="card-title text-muted text-uppercase text-center">Accomodation Booking</h5>
+                <!-- <h3 class="card-price text-center">Book Now</h3> -->
+                <!-- <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Coffee Break</li>
@@ -1371,14 +1416,13 @@
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Workshop Access</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>After Party</li>
                 </ul>
-                <hr>
+                <hr> -->
                 <div class="text-center">
-                  <button type="button" class="btn" data-toggle="modal" data-target="#buy-ticket-modal" data-ticket-type="premium-access">Buy Now</button>
+                  <button type="button" class="btn" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSf3qVUcIwW45pnQAzujQhsIJaz055Zu8m8ODiCYjI3R3kHJ-Q/viewform?usp=dialog')" >Book Now</button>
                 </div>
-
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
 
       </div>
